--- a/alarm/Modules/Main/AlarmCell/AlarmTableViewCell.xib
+++ b/alarm/Modules/Main/AlarmCell/AlarmTableViewCell.xib
@@ -21,6 +21,9 @@
                         <subviews>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LN0-85-HfD">
                                 <rect key="frame" x="248" y="14.5" width="51" height="31"/>
+                                <connections>
+                                    <action selector="switchAction:" destination="KGk-i7-Jjw" eventType="valueChanged" id="WRY-lP-qR4"/>
+                                </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MD3-ZC-5Cv">
                                 <rect key="frame" x="0.0" y="-0.5" width="130" height="61"/>
