--- a/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType1.xib
+++ b/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType1.xib
@@ -20,7 +20,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rb9-bc-lm2">
                         <rect key="frame" x="16" y="11.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uOQ-os-JXh">
@@ -30,7 +30,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" red="0.24222106878290472" green="0.24222106878290472" blue="0.24222106878290472" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
                     <constraint firstItem="uOQ-os-JXh" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="QBu-hL-t2f"/>
                     <constraint firstItem="Rb9-bc-lm2" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Z8v-CU-TQD"/>
