--- a/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType2.xib
+++ b/alarm/Modules/Main/AlarmDetailsSettingsCell/AlarmDetailsTableViewCellType2.xib
@@ -26,7 +26,7 @@
                         <rect key="frame" x="255" y="6.5" width="51" height="31"/>
                     </switch>
                 </subviews>
-                <color key="backgroundColor" red="0.24222106879999999" green="0.24222106879999999" blue="0.24222106879999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="IIk-nN-QeN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="MlZ-cI-Wll"/>
                     <constraint firstItem="edk-X3-mgx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="a3e-pZ-3cW"/>
@@ -35,6 +35,7 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <point key="canvasLocation" x="139" y="65"/>
         </tableViewCell>
     </objects>
